examples/test_package/Double_dc_no_hash_full_tool/steps/benchrps___rough_run1/#test_analysis_1_result.txt
### Rock-Paper-Scissors Game Analysis Report

---

#### **1. Document Title**  
**Analysis of Rock-Paper-Scissors Game Implementation in ProbLog**

---

#### **2. Background and Purpose**  
The provided code implements the classic game of rock-paper-scissors in ProbLog. The goal is to define the game rules, simulate rounds between two players, and determine the winner based on the results of these rounds. The analysis focuses on verifying the correctness of the implementation, identifying any errors, and ensuring compliance with ProbLog's logical and probabilistic rules.

---

#### **3. Test Results Summary**  
The test query `determine_winner([rock,rock,rock],[paper,paper,scissor],W)` was executed, but it resulted in an error:  

```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 16:20.
```

**Failed Query:**  
- `determine_winner([rock,rock,rock],[paper,paper,scissor],W)`  
  - **Expected Result:** The query should return `W = player2` (since `paper` beats `rock` twice and `scissor` loses to `rock` once, resulting in a score of `-1`).  
  - **Actual Result:** Error due to an undefined clause for `->/2`.

---

#### **4. Failure Localization**  
The error occurs in the `play_round` predicate, specifically at the line:  
```prolog
play_round(P1, P2, Result) :-
    (beats(P1, P2) -> Result = win;
     beats(P2, P1) -> Result = lose;
     Result = draw).
```
- **Line Number Interval:** 16:20 (the line containing the `->/2` operator).  
- **Issue:** The `->/2` operator is not correctly interpreted in the ProbLog context, leading to an "UnknownClause" error.

---

#### **5. Root Cause Analysis**  
- **Logical Correctness:**  
  The logic of the `play_round` predicate is correct in classical Prolog, but ProbLog does not natively support the `->/2` operator in this form.  
- **Recursive Termination:**  
  The recursive predicates `play/3` and `compute_score/2` are correctly defined and terminate properly.  
- **Probabilistic Context:**  
  The code does not use probabilistic facts or implications, so no probabilistic rules are violated.  
- **DeepProbLog:**  
  The code does not use any DeepProbLog features (e.g., `nn/3` or `tensor/...`).  

---

#### **6. Overall Analysis**  
- **Functional Requirements:**  
  - **Classical Reasoning:** Partially met. The logic is sound, but the `->/2` operator causes an error.  
  - **Probabilistic Reasoning:** Not applicable (no probabilistic facts or rules).  
  - **Neural Network Integration:** Not used.  
- **Edge Cases:**  
  - The `play_round` predicate fails due to the unsupported `->/2` operator.  
  - Non-list inputs or deep recursion are not tested but could cause issues if not handled.  

---

#### **7. Error Summary**  

| No. | Problem                     | Impact                          | Suggestion                          |
|-----|-----------------------------|---------------------------------|-------------------------------------|
| 1   | Unsupported `->/2` operator | Prevents execution of the query | Replace `->/2` with `if-then-else` or use ProbLog-compatible syntax. |

---

### **Conclusion**  
The implementation of the rock-paper-scissors game is logically sound but fails due to the use of the unsupported `->/2` operator in ProbLog. To fix this, the `play_round` predicate should be rewritten using ProbLog-compatible syntax. The rest of the code (e.g., recursive predicates) is correctly implemented and terminates as expected. No probabilistic or DeepProbLog features are used.  

**Word Count:** ~400 words.  